# TransportPlan

./: .gitignore  README.md
backend/: pyproject.toml
backend/transport/: admin.py
backend/transport/migrations/: 0001_initial.py  0002_alter_company_name_alter_customer_name_and_more.py  0003_transport_driver_transport_license_plate.py
backend/transport/models/: __init__.py  address.py  carrier.py  company.py  customer.py  transport.py  vendor.py
backend/transport_plan/: manage.py  settings.py  urls.py  wsgi.py
backend/transport_plan/transport_plan/: asgi.py  settings.py
backend/user/migrations/: 0001_initial.py
backend/user/models/: user.py
docs/: docs.md
