[tool.poetry]
name = "transport-plan"
version = "0.1.0"
description = ""
authors = ["Kamil Olszewski <kamil.web@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
